# deliberate-lab

./: .eslintrc.json  .firebaserc  .firebaserc.example  .generated.json  .gitignore  .prettierignore  AGENTS.md  CITATION.cff  Copy of Pilot study GUIDE (v2).json  DEPLOY.md  Dockerfile  EPFL.md  JETSKI_STATUS.md  README.md  add_ids.py  angular.json  cloudbuild.yaml  eslint.config.mjs  firebase-test.json  firebase.json  fix_pm.py  launch.sh  nginx-custom.conf  package-lock.json  package.json  refactor_pm.py  run_locally.sh  validation_output.txt
.github/: PULL_REQUEST_TEMPLATE.md
build_scripts/: build_functions.sh  build_utils.sh  install_firebase.sh  install_ollama_container.sh  internal_run_ollama.sh  run_emulators.sh  run_llm_server.sh  run_project.sh
deploy/: build_project.sh  run_emulators.sh
docs/: 3rdpartylicenses.txt  404.html  404.md  Gemfile  README.md  _config.yml  application-structure.md  changelog.md  code-of-conduct.md  deployment.md  getting-started.md  index.html  index.md  main.28a6c93a88248095.js  main.4de10f3493350d04.js  main.8b9ef2eb9fac95ba.js  main.9f9e2e3ba93f6ac4.js  main.bf4860b6e8851c64.js  main.ea8ce642672a4daa.js  polyfills.12e7c38354de3df7.js  runtime.6a183127526982a8.js  styles.2daa8a6d21d5f9da.css
emulator_test_config/: firebase-export-metadata.json
export/: firebase-export-metadata.json
firestore/: database.rules.json  firestore.rules  indexes.json  storage.rules
frontend/: .gcloudignore  .gitignore  AGENTS.md  README.md  app.yaml  declaration.d.ts  eslint_output.json  firebase_config.example.ts  index.example.html  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.cjs  webpack.config.mts  webpack.config.ts
functions/: .env.example  .eslintrc.json  AGENTS.md  build.js  firebase-test.json  package-lock.json  package.json  predeploy.sh  tsconfig.json
lit/: .eslintrc.json  .gitignore  Caddyfile  Dockerfile  README.md  declaration.d.ts  index.html  lit-css-loader.js  package-lock.json  package.json  tsconfig.json  webpack.config.js  webpack.config.ts
llm-interactions/: .gitignore  LICENSE.txt  README.md  pyproject.toml
llm-interactions/notebooks/: sandbox.ipynb
llm-interactions/scripts/: run.py
llm-interactions/src/llm_interactions/: __about__.py  agent.py  prompt.py
llm-interactions/tests/: __init__.py
llm_server/: Dockerfile  run_ollama.sh
scripts/: AGENTS.md  README.md  check_db.js  deliberate_lab.py  deliberate_lab_types.py  deploy-database-rules.js  deploy-firestore-rules.js  deploy-frontend.js  deploy-functions.js  deploy-indexes.js  deploy-preflight.js  deploy-storage-rules.js  dl_api_client.py  dl_api_types.py  doctor.js  ensure-frontend-dev-config.js  generate_guide_template.js  import_local_json.js  package-lock.json  package.json  pyproject.toml  service-account.example.json  tsconfig.json  update_schemas.sh
scripts/deliberate_lab/: __init__.py  client.py  types.py
scripts/lib/: deploy-common.js  frontend-config.js
scripts/src/: admin.ts  seed-database.ts  set-experimenter.ts
src/: index.html
utils/: .eslintrc.json  .prettierrc.json  (+5 more)
(+1187 files in other folders)
