[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-interactions"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Leo Laugier", email = "leojlaugier@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "firebase-admin",
  "jupyter",
  "numpy",
  "google-cloud-aiplatform>=1.38"
]
[project.urls]
Documentation = "https://github.com/unknown/llm-interactions#readme"
Issues = "https://github.com/unknown/llm-interactions/issues"
Source = "https://github.com/unknown/llm-interactions"

[tool.hatch.version]
path = "src/llm_interactions/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/llm_interactions tests}"

[tool.coverage.run]
source_pkgs = ["llm_interactions", "tests"]
branch = true
parallel = true
omit = [
  "src/llm_interactions/__about__.py",
]

[tool.coverage.paths]
llm_interactions = ["src/llm_interactions", "*/llm-interactions/src/llm_interactions"]
tests = ["tests", "*/llm-interactions/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
