[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datamodel-code-generator>=0.42.2",
    "pydantic>=2.12.5",
    "requests",
]

[dependency-groups]
dev = [
    "pyright>=1.1.391",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
